--- a/css/estilo.css
+++ b/css/estilo.css
@@ -191,3 +191,28 @@ border-radius: 10px 5px 10px 5px;
 }
 .sobre:hover{background: #0CF; width: 160px; transition: all 0.5s ease-in-out; border-color: activeborder;}
 /** --------------------------- * FIM * PERSONALIZAÇÂO PARA PARA O MENU -------------------------------- **/
+
+
+/** --------------------------- * PRODUTOS * --------------------------- **/
+
+
+div.img {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.img:hover {
+    border: 1px solid #777;
+}
+
+div.img img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
