Páginas adicionadas, páginas reconfiguradas, etc; Quase tudo funcionando...

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -258,7 +258,7 @@ li.dropdown {
 /** --------------------------- * FIM * PERSONALIZAÇÂO PARA PARA O MENU -------------------------------- **/
 
 
-/** --------------------------- * PRODUTOS * --------------------------- **/
+/** --------------------------- * PRODUTOS ETC * --------------------------- **/
 
 a:link 
 { 
